<resources>
    <string name="app_name">HYOA</string>

<string name="title_activity_aty__login">login</string>
    <string name="login">login in</string>
    <string name="account">account  :</string>
    <string name="accountHint">enter account</string>
    <string name="password">password:</string>
    <string name="passwordHint">enter password</string>
    <string name="account_or_password_not_enter">please enter account or password</string>
    <string name="action_settings">Settings</string>
    <string name="connecting">connecting</string>
    <string name="connecting_to_server">connecting to server,please wait</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="fail_to_login">fail to login.please try later!</string>
    <string name="check_account_and_password">check you account and password </string>
    <string name="fail_to_load">fail to load,please try later</string>
    <string name="to_be_read">待阅信息</string>
    <string name="to_be_audit">待审信息</string>
    <string name="main_page">首页</string>
    <string name="contact_book">通讯录</string>
    <string name="flow_center">流程中心</string>
    <string name="more_information">更多</string>
    <string name="notification">通知</string>
    <string name="contact_search">搜索</string>
    <string name="title_activity_aty_contact">AtyContact</string>




    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_aty_test">atyTest</string>
    <string name="login_out">login out</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_aty__main_tabs__mainpage">Aty_MainTabs_Mainpage</string>
    <string name="title_activity_aty__main_tabs__contact">Aty_MainTabs_Contact</string>
    <string name="title_activity_aty__main_tabs__work_flow">Aty_MainTabs_WorkFlow</string>
    <string name="title_activity_aty__main_tabs__more">Aty_MainTabs_More</string>
    <string name="title_activity_aty__main">Aty_Main</string>
</resources>
