<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textview_with_border"

        android:gravity="center"
        android:paddingBottom="@dimen/width_3_80"
        android:paddingTop="@dimen/width_3_80"
        android:text="@string/notification"
        android:textColor="#000000"

        android:textSize="25dip" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#DCF9FE"
        android:paddingLeft="@dimen/width_1_80"
        android:paddingRight="@dimen/width_1_80"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTabAuditLabel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"

            android:paddingBottom="@dimen/width_5_80"
            android:paddingTop="@dimen/width_5_80"
            android:text="@string/to_be_audit"
            android:textColor="#000000"
            android:textSize="22.0dip" />

        <TextView
            android:id="@+id/tvTabReadLabel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:background="#F4F4F4"
            android:gravity="center"
            android:paddingBottom="@dimen/width_5_80"
            android:paddingTop="@dimen/width_5_80"
            android:text="@string/to_be_read"
            android:textColor="#000000"
            android:textSize="22.0dip" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF" />
</LinearLayout>